2009-10-09  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: simplify alternative TLS on 32 bit builds
	* lispbibl.d (struct thread_specific_data): use spinlock instead of
	mutex and export it
	* spvw.d (tsd_initialize, tsd_setspecific, tsd_remove_specific): ditto
	(tsd_slow_getspecific): lock (with spinlock) hash table modifications.
	prevents races with tsd_remove_specific. contention is unlikely
	(get_stack_region): implement for WIN32_THREADS. stack range returned
	is [*base ... (*base + *size)] regardless SP_DOWN/UP
	(current_stack_base, current_stack_size): remove
	(set_current_thread): use get_stack_region()
	(main) [USE_CUSTOM_TLS=3]: clear all thread mappings before spawning
	"main thread"

2009-10-09  Sam Steingold  <sds@gnu.org>

	* .gdbinit (run_mod_test): add
	(run_ansi_tests): rename from ansi_tests
	(run_ansi_tests_compiled): renamed from ansi_tests_compiled

2009-10-08  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (STACK, back_trace): do not write the declaration
	into clisp.h if the symbol is defined as a CPP macro

2009-10-08  Sam Steingold  <sds@gnu.org>

	* win32aux.d (CHECK_ERROR_IGNORE_INVALID): add
	(fd_read_wont_hang_p): use it to ignore both
	ERROR_INVALID_FUNCTION and ERROR_INVALID_HANDLE in
	GetNumberOfConsoleInputEvents and ClearCommError

2009-10-08  Sam Steingold  <sds@gnu.org>

	* makemake.in (full-mod-check): use base, not full, and require
	the module from the test files

2009-10-08  Sam Steingold  <sds@gnu.org>

	* modules/regexp/gllib/Makefile.am, modules/regexp/gllib/stddef.in.h:
	* modules/regexp/gllib/stdlib.in.h, modules/regexp/gllib/unistd.in.h:
	* modules/regexp/glm4/unistd_h.m4, modules/syscalls/gllib/Makefile.am:
	* modules/syscalls/gllib/errno.in.h, modules/syscalls/gllib/stddef.in.h:
	* modules/syscalls/gllib/strings.in.h, modules/syscalls/gllib/uname.c:
	* modules/syscalls/gllib/sys_socket.in.h, gllib/wchar.in.h:
	* modules/syscalls/gllib/sys_utsname.in.h, gllib/wctype.in.h: